fix loading of toolbars by ... getting rid of lots of code and using kde's facilities directly.

original patch by dave selby; thanks, dave =)

CCMAIL:dave6502@googlemail.com
BUG:130610

svn path=/trunk/KDE/kdeadmin/kcron/; revision=660835